crates/aven-check/tests/fixtures/check/invalid/comptime-merge-mismatch.av
User = { name: Text }
Meta = { age: Int }
merge = (a, b) => { ..a, ..b }
Both = merge(User, Meta)
bad : Both = { name: "Ada" }
